syntax = "proto3";

package ecommerce;

option go_package = "github.com/Egot3/microservicesTest/apiContracts";

import "google/protobuf/timestamp.proto";

enum OrderStatus {
    ORDER_PENDING = 0;
    ORDER_PAID = 1;
    ORDER_SHIPPED = 2;
    ORDER_DELIVERED = 3;
    ORDER_CANCELLED = 4;
}

enum PaymantMethod {
    PAYMENT_UNSPECIFIED = 0;
    PAYMENT_CARD = 1;
    PAYMENT_BANK_TRANCSFER = 2;
}

message Discount {
    oneof discount_spec {
        PercentDiscount percent = 1;
        FixedAmountDiscount fixed = 2;
    }
    string discount_code = 3;
}

message PercentDiscount {
    int32 percentage = 1;
    reserved 2 to 10;
}

message FixedAmountDiscount {
    double amount = 1;
    reserved 2 to 10;
}

message OrderItem {
    string product_id = 1;
    string product_name = 2;
    int32 quantity = 3;

    double unit_price = 4;

    Discount item_discount = 5;
}


message Order {
    string order_id = 1;
    string customer_id = 2;

    repeated OrderItem items = 3;
    double subtotal = 4;
    double total_discounts = 12;
    double shipping_fee = 13;
    double tax_amount = 14;
    double grand_total = 15;

    OrderStatus status = 5;
    PaymantMethod payment_method = 6;

    Discount order_discount = 11;

    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;

    string shipping_address = 9;
    string notes = 10;
}


message CreateOrderRequest {
    string customer_id = 1;
    repeated OrderItemRequest items = 2;
    PaymantMethod payment_method = 3;
    string shipping_address = 4;
	string notes = 5;
}

message OrderItemRequest {
    string product_id = 1;
    int32 quantity = 2;
}

message CreateOrderResponse {
    string order_id = 1;
    double total_amount = 2;
    int32 discount_amount = 4;
    OrderStatus status = 3;
}

message GetOrderRequest {
    string order_id = 1;
}

message GetOrderResponse {
    Order order = 1;
}

message UpdateOrderStatusRequest {
    string order_id = 1;
    OrderStatus new_status = 2;
}

message UpdateOrderStatusResponse {
    bool success = 1;
    Order order = 2;
}

message ListOrdersRequest {
    string customer_id = 1;
    OrderStatus status = 2;
    int32 page = 3;
    int32 page_size = 4;
}

message ListOrdersResponse {
    repeated Order orders = 1;
    int32 total_count = 2;
    int32 page = 3;
    int32 total_pages = 4;
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
    rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);

    rpc StreamOrderUpdates(GetOrderRequest) returns (stream Order);
    rpc BulkCreateOrders(stream CreateOrderRequest) returns (CreateOrderResponse);
    rpc ChatOrderSupport(stream SupportMessage) returns (stream SupportMessage);
}

message SupportMessage {
  string user_id = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}

// Challenge 1: Add Inventory Reservation

// Design messages for reserving inventory when an order is created:

//     What fields would a ReserveInventoryRequest need?

//     How would OrderItem change to track reservation status?
